# sss

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  create-icon.cjs  eslint.config.js  generate-icon.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: architecture.md  design.md  features.md  overview.md  platforms.md  roadmap.md  user-guide.md
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  ignore.rs  image_processor.rs  lib.rs  main.rs  playlist.rs  scanner.rs
src-tauri/src/commands/: file_operations.rs  image.rs  mod.rs  scan.rs  settings.rs  stats.rs  system.rs  types.rs
src-tauri/tests/: golden_e2e.rs
src/components/: OverlayUI.tsx  Settings.tsx  Slideshow.tsx
src/components/Settings/: ExcludeRulesSection.tsx  GraphSection.tsx  HistorySection.tsx  InfoSection.tsx  IntervalSection.tsx  PickSection.tsx  ScanSection.tsx  SettingsSection.tsx  ShareDirectorySection.tsx  ShareFolderSection.tsx  StatsSection.tsx  index.tsx
src/hooks/: useMouseIdle.ts  useSlideshow.test.tsx  useSlideshow.ts
src/lib/: tauri.test.ts  tauri.ts
src/test/: setup.ts
