[package]
name = "sss"
version = "1.0.0"
description = "Smart Slide Show - A photo slideshow application for viewing 100k+ photos"
authors = ["kako-jun"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
globset = "0.4"
walkdir = "2"
kamadak-exif = "0.6"
rand = "0.8"
rayon = "1"
image = "0.25"
md5 = "0.7"
keepawake = "0.4"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
